--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							</svg>
 						</a>
 					</li>
-					<li class="footer_social__item">
+					<li class="footer_social-item">
 						<a href="#" class="footer__social-link">
 							<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path
