--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cap Time by Artem</title>
+	<link rel="stylesheet" href="styles/normalize.css">
+	<link rel="stylesheet" href="styles/style.css">
+
 </head>
 
-<body style="background-color:greenyellow;">
+<body>
 	<header class="header">
-		<div class="container">
+		<div class="container header__container">
 			<a class="header__logo-link">
 				<img src="image/logo.svg" alt="Логотип Cap Time" class="header__logo">
 			</a>
